[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Player/up/profw0.png" type="Texture" id=2]
[ext_resource path="res://Player/right/profd0.png" type="Texture" id=3]
[ext_resource path="res://Player/up/profw2.png" type="Texture" id=4]
[ext_resource path="res://Player/up/profw1.png" type="Texture" id=5]
[ext_resource path="res://Player/down/profs0.png" type="Texture" id=6]
[ext_resource path="res://Player/right/profd1.png" type="Texture" id=7]
[ext_resource path="res://Player/down/profs1.png" type="Texture" id=8]
[ext_resource path="res://Player/down/profs2.png" type="Texture" id=9]
[ext_resource path="res://Player/right/profd2.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 10 ) ],
"loop": true,
"name": "walkx",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.5, 28.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walkx"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="MachineRayCast2D1" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 23 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="MachineRayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 0, -17 )
cast_to = Vector2( 0, 23 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="WallRayCast" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 23 )
